<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jonatas.prova.ConfiguracoesActivity"
    android:id="@+id/relative">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvConfig"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvConfig"
        android:layout_alignEnd="@+id/tvConfig"
        android:layout_marginTop="50dp"
        android:id="@+id/linear01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exibirEmail"
            android:textSize="30dp"
            android:layout_marginTop="30dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear01"
        android:layout_alignStart="@+id/linear01"
        android:id="@+id/linear02">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrarAmigos"
            android:textSize="30dp"
            android:layout_marginTop="30dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"/>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear02"
        android:layout_marginTop="60dp"
        android:onClick="voltarAoDrawer"
        android:text="@string/salvar1"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
